--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "the-image-compressor-cli",
+  "name": "batch-image-compress",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
